# thesis-code

./: inference.py  inference.sh  install.sh  main.py  pyproject.toml  test_modularization.py
CNN/: __init__.py  cnn_nir.py  config.json  evaluate_cnn.py  finetune.py  optimisation.sh  optuna_trials.csv  submit.sh  trials_eval.py
DataLoader/: DataLoader.py  __init__.py  test_dataloader.py
XGBoost/: config.json  evaluate_xgboost.py  optimisation.sh  optuna_trials.csv  submit.sh  temp_config.json  trials_eval.py  xgboost_nir.py
linearRegression/: analyze_coefficients.py  benchsubmit.sh  coefficients.csv  dashboard.py  file_bench.py  linearRegression.py  metrics.csv  results.csv  submit.sh
randomForest/: evaluate_random_forest.py  optimisation.sh  optuna_trials.csv  randomForest.py  submit.sh  trials_eval.py
utils/: __init__.py  base_model.py  data_processing.py  data_splitting.py  decorators.py  evaluation.py  evaluation_core.py  feature_extraction.py  memory_utils.py  training.py
